microservices/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: loan-system
  labels:
    name: loan-system
